# prp

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: main.rs  package_specifier.rs  python.rs  settings.rs  shell.rs  venv.rs
src/cli/: mod.rs  x.rs
src/posy/: mod.rs  package_name.rs  requirement.rs  requirement_parser.rs  specifier.rs
