[package]
name = "prp"
version = "0.1.1"
edition = "2021"

authors = ["Dan Cardin <ddcardin@gmail.com>"]
description = "A tool for bootstrapping python virtualenvs."
documentation = "https://github.com/DanCardin/prp"
homepage = "https://github.com/DanCardin/prp"
repository = "https://github.com/DanCardin/prp"
readme = "README.md"
keywords = [
    "pip",
    "python",
    "venv",
    "virtualenv",
]
categories = ["command-line-utilities"]
license = "Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
clap_complete = "4.3.2"
corpus = { version = "0.2.1", features = ["home", "xdg"] }
etcetera = "0.8.0"
indoc = "2.0.3"
os_pipe = "1.1.4"
regex = "1.9.1"
symlink = "0.1.0"
toml_edit = "0.19.14"
which = "4.4.0"

# Posy
# shrinkwraprs = "*"
# derivative = "*"
# eyre = "*"
# once_cell = "*"
# serde = "*"
# serde_with = "*"
# tracing = "*"
# url = "*"
# pep440 = "*"
# peg = "0.8.1"
